@@ -5,6 +5,9 @@ IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 
 2007/04/07
+	* Fixed the start_point setting smashing t3h stack in some situations
+	* Fixed some over/under-dimensioned arrays (the map length defines already reserve space for the string terminator)
+	* Fixed an unupdated define making Warp Portal fail with an error [ultramage]
 	* Final touches to the whole map crap [DracoRPG]
 	- changed MAP_NAME_LENGTH to 12, now there's MAP_NAME_LENGTH_EXT at 16 for
 	  uses where there is / may be the .gat extension, code adjusted accordingly
